--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="Style.css" />
-    <title>Traversy Media</title>
+    <title>Dimitrijsa Media</title>
   </head>
   <body>
     <header class="showcase">
       <div class="content">
         <img src="logo.png" class="logo" alt="Traversy Media" />
         <div class="title">
-          Welcome to Traversy Media
+          Welcome to Dimitrijsa Media
         </div>
         <div class="text">
           Kasd dolore et erat eu takimata accusam ea eirmod elitr
@@ -69,7 +69,7 @@
     </section>
 
     <footer class="center bg-dark">
-      <p>Traversy Media &copy; 2018</p>
+      <p>Dimitrijsa Media &copy; 2019</p>
     </footer>
   </body>
 </html>
